<resources>
    <string name="app_name">Talaarawan</string>
    <string name="hello">Hello %1$s</string>
    <string name="pin">Pin</string>
    <string name="enter_pin">Enter pin</string>
    <string name="login">Login</string>
    <string name="user">user</string>
    <string name="sign_up">Sign up</string>
    <string name="re_enter_pin">Re-enter pin</string>
    <string name="enter_name">Enter name</string>
    <string name="register">Register</string>
    <string name="entries">Entries</string>
    <string name="no_entries_added_yet">No entries added yet</string>
    <string name="add_entry">add entry</string>
    <string name="write_here">Write here</string>
    <string name="add_title">Add title</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="pins_do_not_match">Pins don\'t match</string>
    <string name="incorrect_pin">Incorrect pin</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_mode">Edit mode</string>
    <string name="entry_saved">Entry saved</string>
    <string name="delete_entry">Delete entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="entry_has_been_deleted">Entry %1$s has been deleted!</string>
</resources>